--- a/frontend/project/vite-project/src/index.css
+++ b/frontend/project/vite-project/src/index.css
@@ -53,7 +53,11 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
