--- a/frontend/project/vite-project/src/App.css
+++ b/frontend/project/vite-project/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   margin: 0 auto;
   text-align: center;
-}
+} */
 body {
-  overflow: hidden;
+  color: rgb(32, 32, 32);
 }
 .custom-marker {
   background-color: transparent;
@@ -31,7 +31,7 @@ body {
 .custom-marker-inner-attraction {
   width: 7px;
   height: 7px;
-  background-color: orange;
+  background-color: rgb(45, 194, 57);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -43,4 +43,77 @@ body {
 }
 .ranking-wrapper {
   overflow-y: auto;
+  padding: 0px 8px;
+}
+.leaflet-div-icon {
+  background: transparent !important;
+  border: none !important;
+}
+.legend {
+  background-color: rgb(74, 74, 74);
+  color: white;
+  padding:8px;
+}
+.legend i{
+  margin-right: 4px;
+}
+.legend h4{
+  margin: 0px;
+}
+.custom {
+  position: relative;
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  border-radius: 8px;
+  background: #0eaa00;
+}
+.library {
+  position: relative;
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background: #1677ff;
+}
+.attraction {
+  position: relative;
+  display: inline-block;
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 10px solid #ff6f00;
+}
+.hospital {
+  position: relative;
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  background: #ffffff;
+}
+.marker-title {
+  position: absolute;
+  left: 12px;
+  top: -5px;
+  color: white;
+  text-shadow: black 0.1em 0em 0.3em;
+  font-weight: 700;
+  white-space: nowrap;
+}
+.container {
+  display: flex;
+  width: 100vw;
+}
+.my-map {
+  flex-grow: 1;
+  height: 100vh;
+  width: 100%;
+  background-color: yellow; /* Optional: for visual separation */
+}
+
+.sidecar {
+    width: 360px;
+    height: 100vh;
+    background-color: #ffffff; /* Optional: for visual separation */
 }
